--- a/manifest.json
+++ b/manifest.json
@@ -14,12 +14,9 @@
   },
   "content_scripts": [
     {
-      "matches": ["<all_urls>" , "https://twitch.tv/*"],
+      "matches": ["https://www.twitch.tv//*"],
       "css":["verticalTwtichCSS.css"],
       "js": ["verticalTwitchJS.js"]
     }
-  ],
-  "permissions": [
-    "storage"
   ]
 }
