added js that can detect orientation change and call a seperate function once if it has

--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,7 @@
   },
   "content_scripts": [
     {
-      "matches": ["https://www.twitch.tv//*"],
+      "matches": ["https://www.twitch.tv/*"],
       "css":["verticalTwtichCSS.css"],
       "js": ["verticalTwitchJS.js"]
     }
